# send-thank-you-email-to-contributor

./: .gitignore  Cargo.toml  README.md
src/: pr-merge-notifier.rs
