[package]
name = "pr-merge-notifier"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/pr-merge-notifier.rs"
crate-type = ["cdylib"]

[dependencies]
github-flows = "0.5.1"
sendgrid-flows = "0.1.2"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
serde_json = "1"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.5"
log = "0.4"
